--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome pour des icônes animées (optionnel) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+    <link rel="shortcut icon" href="https://symbl-cdn.com/i/webp/e8/338a6e4efcdb868086b1415c87c5f8.webp" />
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
