--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" id="favicon" href="light-favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="https://symbl-cdn.com/i/webp/e8/338a6e4efcdb868086b1415c87c5f8.webp">
+  <link rel="shortcut icon" href="https://symbl-cdn.com/i/webp/e8/338a6e4efcdb868086b1415c87c5f8.webp"/>
   <style>
     :root {
       --bg-gradient: linear-gradient(135deg, #f0faff, #dbefff);
